--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@ryangjchandler/alpine-clipboard": "^2.3.0",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "alpine-toast": "^0.0.2",
         "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.2",
         "axios": "^1.11.0",
@@ -20,5 +22,8 @@
     },
     "dependencies": {
         "fuse.js": "^7.1.0"
+    },
+    "overrides": {
+      "json5": "^1.0.2"
     }
 }
