--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=db_sidukzi_nias
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Simpan dulu file kenfigurasi Google Drive di dalam storage, lalu arahkan path di bawah ini ke file tersebut. Cara mendapatkan file ini bisa dilihat di dokumentasi Google Drive API.
+GOOGLE_DRIVE_CREDENTIALS_PATH=/path/to/credentials.json
+
+# ID folder Google Drive yang akan digunakan sebagai root penyimpanan file. Ini bisa ditemukan di URL saat membuka folder tersebut di Google Drive. Contoh: https://drive.google.com/drive/folders/your_google_drive_folder_id
+GOOGLE_DRIVE_ROOT_FOLDER_ID=your_google_drive_folder_id
